--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles/styles.scss"
+              "src/styles/styles.scss",
+              "src/styles/forms.scss"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -95,7 +96,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles/styles.scss"
+              "src/styles/styles.scss",
+              "src/styles/forms.scss"
             ],
             "scripts": []
           }
